Fix settings logo on Firefox

--- a/assets/css/admin/settings.css
+++ b/assets/css/admin/settings.css
@@ -106,6 +106,7 @@
   line-height: 0;
   max-width: 196px;
   padding: 5px 0;
+  flex: auto;
 }
 
 .videoigniter-settings-logo img {
